// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TopBannerUser (intern) Defaults play-test 1`] = `
<div data-test-block="true">
  <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_filled__oJNLx  undefined">
    <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_filled__h6Gxu TopBannerButton_icon__FyVd5"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r2:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r2:">
        Innlogget som meg selv
      </title>
      <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
      </path>
    </svg>
    <span class="TopBannerUser_username__MVVJ2">
      SØRUMSAND-SCHOENBERG WILLIAM
    </span>
  </button>
</div>
`;

exports[`Tester/TopBannerUser (intern) WithAllRoles play-test 1`] = `
<div data-test-block="true">
  <div class="topbannerButtonContainer">
    <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_filled__oJNLx bottomSpacingXL undefined">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_filled__h6Gxu TopBannerButton_icon__FyVd5"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r3:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r3:">
          Innlogget som meg selv
        </title>
        <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
        </path>
      </svg>
      <span class="TopBannerUser_username__MVVJ2">
        meg
      </span>
    </button>
    <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_filled__oJNLx bottomSpacingXL undefined">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_filled__h6Gxu TopBannerButton_icon__FyVd5"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r4:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r4:">
          Innlogget som annen person
        </title>
        <path d="M15.94 14c5.735.35 6.043 3.62 6.06 3.97V20h-4v-2a5.321 5.321 0 0 0-2.06-4ZM9 14c6.65 0 6.982 3.61 7 3.971V20H2v-2.029C2.019 17.61 2.35 14 9 14Zm6-9a3.5 3.5 0 1 1 0 7 3.39 3.39 0 0 1-1.93-.59 5.001 5.001 0 0 0 0-5.82A3.39 3.39 0 0 1 15 5ZM9 5a3.5 3.5 0 1 1 0 7 3.5 3.5 0 0 1 0-7Z">
        </path>
      </svg>
      <span class="TopBannerUser_username__MVVJ2">
        verge
      </span>
    </button>
    <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_filled__oJNLx bottomSpacingXL undefined">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_filled__h6Gxu TopBannerButton_icon__FyVd5"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r5:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r5:">
          Innlogget som virksomhet
        </title>
        <path d="M10 2h4a2 2 0 0 1 2 2v2h4a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V8c0-1.11.89-2 2-2h4V4c0-1.11.89-2 2-2Zm4 4V4h-4v2h4Z">
        </path>
      </svg>
      <span class="TopBannerUser_username__MVVJ2">
        virksomhet
      </span>
    </button>
  </div>
</div>
`;

exports[`Tester/TopBannerUser (intern) WithAttributes play-test 1`] = `
<div data-test-block="true">
  <button id="htmlid"
          class="TopBannerButton_button__5RUa7 TopBannerButton_button_filled__oJNLx dummyClassname undefined"
          lang="nb"
          data-testid="123ID"
  >
    <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_filled__h6Gxu TopBannerButton_icon__FyVd5"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r1:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r1:">
        Innlogget som meg selv
      </title>
      <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
      </path>
    </svg>
    <span class="TopBannerUser_username__MVVJ2">
      SØRUMSAND-SCHOENBERG WILLIAM
    </span>
  </button>
</div>
`;

exports[`Tester/TopBannerUser (intern) WithBreakpointL smoke-test 1`] = `
<div data-test-block="true">
  <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_filled__oJNLx  undefined">
    <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_filled__h6Gxu TopBannerButton_icon__FyVd5"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:ra:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:ra:">
        Innlogget som meg selv
      </title>
      <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
      </path>
    </svg>
    <span class="TopBannerUser_username__MVVJ2">
      SØRUMSAND-SCHOENBERG WILLIAM
    </span>
  </button>
</div>
`;

exports[`Tester/TopBannerUser (intern) WithBreakpointM smoke-test 1`] = `
<div data-test-block="true">
  <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_filled__oJNLx  undefined">
    <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_filled__h6Gxu TopBannerButton_icon__FyVd5"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r9:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r9:">
        Innlogget som meg selv
      </title>
      <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
      </path>
    </svg>
    <span class="TopBannerUser_username__MVVJ2">
      SØRUMSAND-SCHOENBERG WILLIAM
    </span>
  </button>
</div>
`;

exports[`Tester/TopBannerUser (intern) WithBreakpointS smoke-test 1`] = `
<div data-test-block="true">
  <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_filled__oJNLx  undefined">
    <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_filled__h6Gxu TopBannerButton_icon__FyVd5"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r8:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r8:">
        Innlogget som meg selv
      </title>
      <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
      </path>
    </svg>
    <span class="TopBannerUser_username__MVVJ2">
      SØRUMSAND-SCHOENBERG WILLIAM
    </span>
  </button>
</div>
`;

exports[`Tester/TopBannerUser (intern) WithBreakpointXS smoke-test 1`] = `
<div data-test-block="true">
  <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_filled__oJNLx  undefined">
    <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_filled__h6Gxu TopBannerButton_icon__FyVd5"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r7:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r7:">
        Innlogget som meg selv
      </title>
      <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
      </path>
    </svg>
    <span class="TopBannerUser_username__MVVJ2">
      SØRUMSAND-SCHOENBERG WILLIAM
    </span>
  </button>
</div>
`;

exports[`Tester/TopBannerUser (intern) WithMobileScreen smoke-test 1`] = `
<div data-test-block="true">
  <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_filled__oJNLx  undefined">
    <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_filled__h6Gxu TopBannerButton_icon__FyVd5"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r6:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r6:">
        Innlogget som meg selv
      </title>
      <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
      </path>
    </svg>
    <span class="TopBannerUser_username__MVVJ2">
      SØRUMSAND-SCHOENBERG WILLIAM
    </span>
  </button>
</div>
`;

exports[`Tester/TopBannerUser (intern) WithRef play-test 1`] = `
<div data-test-block="true">
  <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_filled__oJNLx  undefined"
          id="dummyIdForwardedFromRef"
  >
    <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_filled__h6Gxu TopBannerButton_icon__FyVd5"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r0:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r0:">
        Innlogget som meg selv
      </title>
      <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
      </path>
    </svg>
    <span class="TopBannerUser_username__MVVJ2">
      SØRUMSAND-SCHOENBERG WILLIAM
    </span>
  </button>
</div>
`;
